Sprint 6: Убрал ограничение размеров истории, избавился от повторов в истории + тесты